# writetofillet

./: README.md  agents.md  license.md  pyproject.toml  readme.md  spec.md  writetofillet.py
.github/workflows/: build.yml  ci.yml  coverage-badge.yml  format.yml  lint.yml  packagers-verify.yml  release.yml  test.yml  update-packagers.yml
Formula/: writetofillet.rb
assets/: image-gen-prompt.md
bucket/: writetofillet.json
examples/: README.md  config.json  config.toml  config.yaml
scripts/: gen_coverage_badge.py  install.bat  install.sh  package.bat  package.sh  pyinstaller_entry.py  update.bat  update.sh
src/writetofillet/: __init__.py  _args.py  _bench.py  _dictutil.py  _genutil.py  _pump.py  _sizeutil.py  _updates.py  cli.py
tests/: test_benchmark_mode.py  test_buffer_modes.py  test_cli_dict_modes.py  test_cli_dict_ram.py  test_cli_modes_and_size.py  test_cli_multithread.py  test_cli_word_and_append.py  test_config_file_json.py  test_dict_list.py  test_disk_guard_global.py  test_disk_guard_margin.py  test_fsync_interval.py  test_generate_concurrency.py  test_newline_modes.py  test_size_parse.py  test_targets_dir_and_filelist.py  test_times_range_power.py  test_write_mode_condensed.py  test_write_mode_overwrite.py
